# vanity_crypto

./: .dockerignore  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  package-lock.json  package.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  custom.md  feature_request.yml
.github/actions/setup-env/: action.yml
.github/workflows/: auto-tag.yml  benchmark.yml  ci-linux.yml  ci-macos.yml  ci-windows.yml  codeql.yml  docker-publish.yml  manual-tag.yml  release.yml  security.yml
.husky/: pre-commit
Formula/: vanity_crypto.rb
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/tests/: integration.rs
crates/cli/tests/snapshots/: integration__help_snapshot.snap  integration__help_snapshot.snap.new  integration__invalid_arg_snapshot.snap  integration__version_snapshot.snap  integration__version_snapshot.snap.new
crates/core/: Cargo.toml
crates/core/src/: crypto.rs  error.rs  lib.rs  traits.rs  types.rs
crates/ui/: Cargo.toml
crates/ui/src/: app.rs  lib.rs  view.rs
crates/wallet/: Cargo.toml
crates/wallet/benches/: benchmark.rs
crates/wallet/src/: bitcoin.rs  cosmos.rs  ethereum.rs  lib.rs  solana.rs  ton.rs
homebrew/: vanity_crypto.rb
npm/: install.js
scoop/: vanity_crypto.json
scripts/: check-versions.js  release.js  ton_prototype.py
tests/verify_validate/: fuzz_test.py  main.py  requirements.txt  run.py
tests/verify_validate/verifier/: consts.py  utils.py
tests/verify_validate/verifier/chains/: bitcoin.py  cosmos.py  ethereum.py  solana.py  ton.py
