[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Athex Web3"]
description = "A high-performance, secure, and beautiful Ethereum vanity address generator"
repository = "https://github.com/athexweb3/vanity_crypto"
homepage = "https://github.com/athexweb3/vanity_crypto"
license = "MIT"

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29"
hex = "0.4"
indicatif = "0.17"
k256 = { version = "0.13", features = ["ecdsa", "std"] }
rand = "0.8"
ratatui = "0.29"
rayon = "1.10"
sha3 = "0.10"
thiserror = "2.0"
tokio = { version = "1.42", features = ["full"] }


# Internal crates
vanity_core = { path = "crates/core" }
vanity_wallet = { path = "crates/wallet" }
vanity_ui = { path = "crates/ui" }
