[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0-beta.4"
edition = "2021"
authors = ["Athex Web3 <athexweb3@gmail.com>"]
description = "A high-performance, secure, and beautiful Ethereum vanity address generator"
repository = "https://github.com/athexweb3/vanity_crypto"
homepage = "https://github.com/athexweb3/vanity_crypto"
license = "MIT"

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29"
hex = "0.4"
indicatif = "0.18"
k256 = { version = "0.13", features = ["ecdsa", "std"] }
rand = "0.9"
ratatui = "0.29"
rayon = "1.10"
sha3 = "0.10"
thiserror = "2.0"
tokio = { version = "1.42", features = ["full"] }

# Dev dependencies
assert_cmd = "2.0"
predicates = "3.1"
insta = { version = "1.45.0", features = ["yaml"] }


# Internal crates
vanity_core = { path = "crates/core" }
vanity_wallet = { path = "crates/wallet" }
vanity_ui = { path = "crates/ui" }
