[package]
name = "vanity_cli"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
description = { workspace = true }

# Binary name when built
default-run = "vc"

[[bin]]
name = "vc"
path = "src/main.rs"

[dependencies]
vanity_core = { workspace = true }
vanity_wallet = { workspace = true }
vanity_ui = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }

