[package]
name = "vanity_core"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
description = "Core logical types for vanity_crypto"

[dependencies]
thiserror = { workspace = true }
hex = { workspace = true }
k256 = { workspace = true }
sha3 = { workspace = true }
rand = { workspace = true }
bs58 = "0.5"
bech32 = "0.11.1"

[dev-dependencies]
proptest = { version = "1.10.0" }
