[package]
name = "vanity_wallet"
version = "0.1.0"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
description = "Wallet generation logic for vanity_crypto"

[dependencies]
vanity_core = { workspace = true }
k256 = { workspace = true }
sha3 = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
anyhow = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
proptest = { version = "1.9.0", features = ["proptest-macro"] }
criterion = "0.5"

[[bench]]
name = "benchmark"
harness = false
