[package]
name = "vanity_wallet"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
description = "Wallet generation logic for vanity_crypto"

[dependencies]
vanity_core = { workspace = true }
k256 = { workspace = true }
sha3 = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
anyhow = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
proptest = { version = "1.9.0", features = ["proptest-macro"] }
criterion = "0.8"

[[bench]]
name = "benchmark"
harness = false
