[package]
name = "vanity_wallet"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
description = "Wallet generation logic for vanity_crypto"

[dependencies]
vanity_core = { workspace = true }
k256 = { workspace = true }
sha3 = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
anyhow = { workspace = true }
hex = { workspace = true }
bitcoin = { version = "0.32", features = ["rand", "serde"] }
ed25519-dalek = "2.1"
bs58 = "0.5"
sha2 = "0.10.9"
base64 = "0.22.1"
crc = "3.4.0"
bech32 = "0.11.1"
ripemd = "0.1.3"

[dev-dependencies]
proptest = { version = "1.9.0", features = ["proptest-macro"] }
criterion = "0.8"

[[bench]]
name = "benchmark"
harness = false
